exports[`root > render > should render the html string 1`] = `
[
  [
    "body",
    "<div data-id=\\"1\\" id=\\"test\\" class=\\"container\\">hello, world!</div>"
  ]
]
`;

exports[`root > update > should render updated html string 1`] = `
[
  "body",
  "<div data-id=\\"1\\" id=\\"test\\" class=\\"container\\">hello<span data-id=\\"2\\">, world~</span></div>"
]
`;
